// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested style 1`] = `
  const App = () => {
    return <div className="element_52j">Hello World</div>;
  };
  
  css(\`
  	.element_52j {
  		color: red;
  	}
  \`);
`;

exports[`style 1`] = `
  const App = () => {
    return <div className="App_8dv">Hello World</div>;
  };
  
  css(\`
  	.App_8dv {
  		color: red;
  	}
  \`);
`;
